# DissertationPhd

./: .gitignore  ReadMe.md  cosmetic.py  experiments.py  frases.py  helper.py  helper2.py  helper3.py  main.py  main_objects.py  plot_func.py  pyproject.toml  test.py  tiny_functions.py
obsidian/: main_femto.md  papers.md
srs/kiamfemto/: __init__.py  __main__.py  config.py  cosmetic.py  dynamics.py  extra_simulation.py  gnc_systems.py  interface.py  my_math.py  my_plot.py  primary_info.py  simulation.py  spacecrafts.py
srs/kiamfemto/data/: config_choose.csv  observability_mapping_partial_derivatives.py
srs/kiamfemtosat/: config.py  control.py  cosmetic.py  dynamics.py  extra_simulation.py  gnc_systems.py  guidance.py  main.py  my_math.py  my_plot.py  navigation.py  primary_info.py  spacecrafts.py
srs/kiamfemtosat/data/: observability_mapping_partial_derivatives.py
srs/kiamformation/: H_matrix.py  __init__.py  __main__.py  config.py  cosmetic.py  dynamics.py  gnc_systems.py  interface.py  my_math.py  my_plot.py  primary_info.py  simulation.py  spacecrafts.py  symbolic.py
srs/kiamformation/data/: H_matrix.py  config_choose.csv  phrases.txt
srs/test/: lib_tests.py  test.py  test_reference_frames.py
